pequeña modificacion en h3 pagina index

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <img src="images\omelet-de-frutilla-con-crema.jpg" alt="omelet de frutillas con crema">
                         </div>
                         <div class="producto1__text">
-                            <h3>Reposteria y más</h3>
+                            <h3>"Reposteria y más"</h3>
                             <p>Descubre las especialidades de Reposteria que te traemos desde corea del sur y los clasicos bocadillos para acompañar tu bebida. Cada uno de ellos elaborados artesanalmente.</p>
                             <a href="productos.html" class="enlaceVerMas">ver más</a>
                         </div>
@@ -71,7 +71,7 @@
                             <img src="images\cafe1.jpg" alt="cafe">
                         </div>
                         <div class="producto2__text">
-                            <h3>Cafe y más</h3>
+                            <h3>"Cafe y más"</h3>
                             <p>Ademas del cafe podras encontrar una variedad de bebidas eleboradas con los mejores ingredientes. Elige tu bebida favorita.</p>
                             <a href="productos.html" class="enlaceVerMas">ver más</a>
                         </div>
