pequeña modificacion a la pagina nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -53,7 +53,7 @@
                 <div class="main__nosotrosText">
                     <p>Mochato es una cafetería especializada en reposteria coreana, de producción propia y artesanal, que inicio sus actividades en el 2021. Cada producto esta preparado siguiendo recetas traidas desde corea del sur. Poder mostrar parte de la cultura coreana mediante estos productos fue una de las razones por las cuales se creo Mochato.</p>
                     <p>En Mochato, las personas podran disfrutar de un ambiente ideal para reuniones en familia, con amigos o simplemente disfrutar de un momento de tranquilidad.</p>
-                    <p>Mochato ademas de buscar mejorar diariamente la calidad de sus productos y la experiencia de sus clientes. Tambien tiene como objetivo principal, aumentar la difución de la cultura coreana. Creando un lugar donde las personas puedan hallar aquellos productos elaborados artesanalmente, que en otro lado no pueden encontrar.</p>
+                    <p>Mochato ademas de buscar mejorar diariamente la calidad de sus productos y la experiencia de sus clientes. Tambien tiene como objetivo principal, aumentar la difusión de la cultura coreana. Creando un lugar donde las personas puedan hallar aquellos productos elaborados artesanalmente, que en otro lado no pueden encontrar.</p>
                 </div>
                 <div class="main__nosotrosFoto">
                     <img src="./images/logo-mochato-1.jpg" alt="logo de mochato">
